<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#000000">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_headingCol"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_keywordHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="Keyword"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/text_dateStartHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="Start Date"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/text_dateEndHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="End Date"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/text_inputCol"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/text_keyword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ffffff"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/text_dateStart"
                    android:focusable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ffffff"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/text_dateEnd"
                    android:focusable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#ffffff"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="#ffffff" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="confirm" />
    </LinearLayout>
</LinearLayout>